gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/test18938b/file.d
version https://git-lfs.github.com/spec/v1
oid sha256:0b730904846679fcf4bf21741acf7f6b672c1fe4c84d62965b264de45c8d4ece
size 431
